# lorebird

./: .gitignore  Cargo.toml  DESIGN.md  DEV.md  FEATURE_TODO.md  HUMAN_TODO.md  IMPLEMENTATION_TODO.md  LICENSE  LOREBIRD-RENAME.md  README.md  code-state.md  config.lua.sample  flake.nix  rust_examples_note.md  tmp-fix.md
.github/workflows/: build-mac.yml  build.yml  ci.yml  release.yml
crates/gtk4-hello/: Cargo.toml
crates/gtk4-hello/src/: main.rs
crates/lorebird-core/: Cargo.toml
crates/lorebird-core/src/: compose.rs  config_dir.rs  indexer.rs  lib.rs  maildir.rs  query.rs  thread.rs
crates/lorebird-gtk/: Cargo.toml  build.rs
crates/lorebird-gtk/resources/: org.lorebird.app.gresource.xml
crates/lorebird-gtk/src/: app_state.rs  compose.rs  folder_item.rs  lua_thread.rs  main.rs  thread_node.rs  window.rs
crates/lorebird-lorefetch/: Cargo.toml
crates/lorebird-lorefetch/src/: lib.rs
crates/lorebird-lua/: Cargo.toml
crates/lorebird-lua/src/: config.rs  lib.rs
crates/lorebird-sendmail/: Cargo.toml
crates/lorebird-sendmail/src/: lib.rs
crates/loreread-core/: Cargo.toml
crates/loreread-core/src/: compose.rs  config_dir.rs  indexer.rs  lib.rs  message.rs  query.rs  schema.rs  store.rs  thread.rs
crates/loreread-gtk/: Cargo.toml  build.rs
crates/loreread-gtk/resources/: org.loreread.app.gresource.xml
crates/loreread-gtk/src/: app_state.rs  compose.rs  folder_item.rs  lua_thread.rs  main.rs  thread_node.rs  window.rs
crates/loreread-lorefetch/: Cargo.toml
crates/loreread-lorefetch/src/: lib.rs
crates/loreread-lua/: Cargo.toml
crates/loreread-lua/src/: config.rs  lib.rs
crates/loreread-sendmail/: Cargo.toml
crates/loreread-sendmail/src/: lib.rs
docs/: DEV.md  config.md  installing.md  lua_api.md  query-language.md
examples/: 03-helloworld1.rs
icon/: icon
scripts/: win-ucr64t-bundler.sh
specs/: app_config_and_email_compose.md  icon.md  idea_pgp_signing.md  indexing.md  lorefetch-module.md  sendmail-module.md  stream-fetch.md  threading.md
src/: main.rs  thread.rs
tools/lorefetch/: Cargo.toml
tools/lorefetch/src/: main.rs
tools/mail-query/: Cargo.toml
tools/mail-query/src/: main.rs
tools/maildir-index/: Cargo.toml
tools/maildir-index/src/: main.rs
tools/query-test/: Cargo.toml
tools/query-test/src/: main.rs
tools/thread-test/: Cargo.toml
tools/thread-test/src/: main.rs
