[workspace]
members = [
    "crates/loreread-core",
    "crates/loreread-lua",
    "crates/loreread-gtk",
    "crates/loreread-lorefetch",
    "crates/loreread-sendmail",
    "tools/maildir-index",
    "tools/mail-query",
    "tools/query-test",
    "tools/thread-test",
    "tools/lorefetch",
]
resolver = "3"
