[workspace]
members = [
    "crates/lorebird-core",
    "crates/lorebird-lua",
    "crates/lorebird-gtk",
    "crates/lorebird-lorefetch",
    "crates/lorebird-sendmail",
    "tools/maildir-index",
    "tools/mail-query",
    "tools/query-test",
    "tools/thread-test",
    "tools/lorefetch",
]
resolver = "3"
