[package]
name = "lorebird-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.39", features = ["bundled"] }
mail-parser = "0.10"
nom = "7"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"
