[package]
name = "lorebird"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "lorebird"
path = "src/main.rs"

[build-dependencies]
glib-build-tools = "0.22"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
gtk4 = { version = "0.11", package = "gtk4", features = ["v4_10"] }
gdk4 = "0.11"
glib = { version = "0.22", features = ["v2_74"] }
gio = "0.22"
sourceview5 = "0.11"
lorebird-core = { path = "../lorebird-core" }
lorebird-lua = { path = "../lorebird-lua" }
rusqlite = { version = "0.39", features = ["bundled"] }