[package]
name = "lorebird-lua"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = "0.11", features = ["lua54", "vendored", "serialize"] }
lorebird-core = { path = "../lorebird-core" }
lorebird-lorefetch = { path = "../lorebird-lorefetch" }
lorebird-sendmail = { path = "../lorebird-sendmail" }
mail-parser = "0.10"
serde = { version = "1", features = ["derive"] }
