[package]
name = "lorebird-sendmail"
version = "0.1.0"
edition = "2024"
description = "Send email via SMTP (built on lettre)"

[dependencies]
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls", "hostname"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
serde_json = "1"