[package]
name = "loreread"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "loreread"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.11", package = "gtk4", features = ["v4_10"] }
gdk4 = "0.11"
glib = { version = "0.22", features = ["v2_74"] }
gio = "0.22"
sourceview5 = "0.11"
loreread-core = { path = "../loreread-core" }
loreread-lua = { path = "../loreread-lua" }
rusqlite = { version = "0.39", features = ["bundled"] }